--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,5 +1,5 @@
 <h3>Form for notes</h3>
-<%= form_for :note, url: {action: 'create'} do |f|%>
+<%= form_for :note, :html => {:multipart => true} url: {action: 'create'} do |f|%>
 	<p>
 		<%= f.label :title%>
 		<%= f.text_field :title, placeholder: "Enter your title here"%>
@@ -8,6 +8,9 @@
 	<p>
 		<%= f.label :content %>
 		<%= f.text_area :content, placeholder: "Enter content"%>
+	</p>
+	<p>
+		<%= f.file_field :folder %>
 	</p>
 	<%= f.submit ("Save notes")%>
 <%end%>
